Renamed packages, gradle 8.12, workflows